--- a/site/web/app/languages/admin-lv.po
+++ b/site/web/app/languages/admin-lv.po
@@ -2,12 +2,12 @@
 # This file is distributed under the same license as the WordPress - 6.1.x - Development - Administration package.
 msgid ""
 msgstr ""
-"PO-Revision-Date: 2023-01-01 16:08:53+0000\n"
+"PO-Revision-Date: 2023-03-03 00:36:37+0000\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=3; plural=(n % 10 == 0 || n % 100 >= 11 && n % 100 <= 19) ? 0 : ((n % 10 == 1 && n % 100 != 11) ? 1 : 2);\n"
-"X-Generator: GlotPress/4.0.0-alpha.3\n"
+"X-Generator: GlotPress/4.0.0-alpha.4\n"
 "Language: lv\n"
 "Project-Id-Version: WordPress - 6.1.x - Development - Administration\n"
 
@@ -42,6 +42,16 @@ msgstr "Europe/Riga"
 #, gp-priority: high
 msgid "Continue"
 msgstr "Turpināt"
+
+#. translators: The localized WordPress download URL.
+#: wp-admin/about.php:648
+msgid "https://wordpress.org/download/"
+msgstr "https://wordpress.org/download/"
+
+#. translators: %s: The major version of WordPress for this branch.
+#: wp-admin/about.php:645
+msgid "This is the final release of WordPress %s"
+msgstr "Šis ir pēdējais WordPress %s laidiens"
 
 #: wp-admin/includes/theme.php:335
 msgid "Site Editor"
